// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GlobalNavigation.MobileView.Header /> should render base component correctly 1`] = `
<div>
  <nav
    aria-label="header navigation"
    class="base darkClosed"
    role="navigation"
  >
    <ul
      class="list"
    >
      <li
        class="item itemLogo"
      />
      <li
        class="item"
      >
        <button
          class="base dark action actionSearch"
          data-test-ref="NAV_SEARCH"
          type="button"
        >
          <svg
            aria-labelledby="search-1"
            class="base search dark searchIcon"
            data-testid="data-testid-Icon"
            focusable="false"
            height="16"
            role="img"
            style="height: 16px; width: 16px;"
            tabindex="-1"
            viewBox="0 0 16 16"
            width="16"
          >
            <title
              id="search-1"
            >
              search
            </title>
            <g>
              <path
                d="M11.9544 10.8246C12.8838 9.65831 13.3941 8.18223 13.3941 6.68793C13.3941 3.00683 10.3872 0 6.68793 0C2.98861 0 0 3.00683 0 6.68793C0 10.369 3.00683 13.3759 6.68793 13.3759C8.16401 13.3759 9.64009 12.8656 10.8246 11.9362L14.8519 15.9636L16 14.8155L11.9544 10.8246ZM6.68793 11.7904C3.89977 11.7904 1.62187 9.51253 1.62187 6.72437C1.62187 3.93622 3.89977 1.65831 6.68793 1.65831C9.47608 1.65831 11.754 3.93622 11.754 6.72437C11.754 9.51253 9.47608 11.7904 6.68793 11.7904Z"
              />
            </g>
          </svg>
        </button>
      </li>
      <li
        class="item"
      >
        <button
          class="base dark action actionCart ornamentalWrapper"
          data-test-ref="NAV_CART"
          type="button"
        >
          <span
            class="ornamentalHover ornamentalHover"
          />
        </button>
      </li>
      <li
        class="item itemMenu"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="base dark action actionMenu"
          data-test-ref="NAV_MOBILE_MENU"
          type="button"
        >
          <span
            class="base"
          />
        </button>
      </li>
    </ul>
  </nav>
  ;
</div>
`;

exports[`<GlobalNavigation.MobileView.Header /> should use default theme 1`] = `
<div>
  <nav
    aria-label="header navigation"
    class="base darkClosed"
    role="navigation"
  >
    <ul
      class="list"
    >
      <li
        class="item itemLogo"
      />
      <li
        class="item"
      >
        <button
          class="base dark action actionSearch"
          data-test-ref="NAV_SEARCH"
          type="button"
        >
          <svg
            aria-labelledby="search-2"
            class="base search dark searchIcon"
            data-testid="data-testid-Icon"
            focusable="false"
            height="16"
            role="img"
            style="height: 16px; width: 16px;"
            tabindex="-1"
            viewBox="0 0 16 16"
            width="16"
          >
            <title
              id="search-2"
            >
              search
            </title>
            <g>
              <path
                d="M11.9544 10.8246C12.8838 9.65831 13.3941 8.18223 13.3941 6.68793C13.3941 3.00683 10.3872 0 6.68793 0C2.98861 0 0 3.00683 0 6.68793C0 10.369 3.00683 13.3759 6.68793 13.3759C8.16401 13.3759 9.64009 12.8656 10.8246 11.9362L14.8519 15.9636L16 14.8155L11.9544 10.8246ZM6.68793 11.7904C3.89977 11.7904 1.62187 9.51253 1.62187 6.72437C1.62187 3.93622 3.89977 1.65831 6.68793 1.65831C9.47608 1.65831 11.754 3.93622 11.754 6.72437C11.754 9.51253 9.47608 11.7904 6.68793 11.7904Z"
              />
            </g>
          </svg>
        </button>
      </li>
      <li
        class="item"
      >
        <button
          class="base dark action actionCart ornamentalWrapper"
          data-test-ref="NAV_CART"
          type="button"
        >
          <span
            class="ornamentalHover ornamentalHover"
          />
        </button>
      </li>
      <li
        class="item itemMenu"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="base dark action actionMenu"
          data-test-ref="NAV_MOBILE_MENU"
          type="button"
        >
          <span
            class="base"
          />
        </button>
      </li>
    </ul>
  </nav>
  ;
</div>
`;
